src/sample/Errors/C0020_(not_implemented).st
// C0020: '{statement}' is no valid statement
// SAMPLE: _bit = 0;
// This error will not be implemented because it is just a syntax error.
